Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilog::Language 3.415 devel

****	Fix dumpcheck test false failures, bug939. [Gene Sullivan]


* Verilog::Language 3.414 2015-06-26

****	Add Parser useProtected argument to aid runtime, bug899. [Corey Teffetalor]

****	Fix Preproc loop under Perl-Tk, bug913. [Stefan Tauner]

****	Fix vhier infinite loop on recursive modules.

****	Fix preprocessing stringified newline escapes, bug915. [Anton Rapp]

****	Fix building for Mac 10.10 with Perl 5.18.2, bug923. [S Liu]

****	Fix parsing comments before signal end, bug917. [Raj G, Jeffrey Huynh]


* Verilog::Language 3.412 2015-03-16

****    Fix len error in 3.410, bug896. [Jon Nall]


* Verilog::Language 3.410 2015-03-14

****	Fix non-ANSI modport instantiations, bug868. [Kevin Thompson]

****    Fix extra text in delay-number callback, bug893. [Greg Waters]

****	Fix virtual modport without interface in classes, bug778. [Jon Nall]


* Verilog::Language 3.408 2014-11-15

***	Fix +define+A+B to define A and B to match other simulators, bug847. [Adam Krolnik]

***	Show old and new value when redefining a define, bug846. [Adam Krolnik]

****	Fix loss of trireg on output signals, msg1491. [Matt Lanahan]

****	Fix quoted comment slashes in defines, bug845. [Adam Krolnik]


* Verilog::Language 3.406 2014-09-21

***     Add Verilog::Preproc->parent() method, bug813. [Ed Carstens]

***     Add Verilog::Netlist::File->preproc() method, bug813. [Ed Carstens]

****	Pass CFLAGS/CPPFLAGS for easier packaging, bug786. [Florian Schlichting]

****	Fix width of byte, bug812. [Ed Carstens]

****    Fix interfaces with variable dimension, bug818. [Glen Gibb]


* Verilog::Language 3.404 2014-06-08

***	Added Verilog::Netlist/Verilog::Parser parser option.

****	In vppreproc, add option -P as alias of --noline to match GCC.
