@@ -1,4 +1,4 @@
-# Generated by vrename on Mon Sep 13 16:30:03 2010
+# Generated by vrename on Sat Sep  5 15:38:09 2015
 #
 # Files read for this analysis:
 vfile	"t/51_vrename_kwd.v"
@@ -6,6 +6,7 @@ vfile	"t/51_vrename_kwd.v"
 #	Original Signal Name		Name to change to
 #	--------------------		-----------------
 #
+sigren	"$display"			"$display"
 sigren	"\do "				"\do "
 sigren	"\esc[ape]d "			"\esc[ape]d "
 sigren	"do"				"\do "
