@@ -6,7 +6,9 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.415 devel
 
-****	Fix dumpcheck test false failures, bug939. [Gene Sullivan]
+****    Fix dumpcheck test false failures, bug939. [Gene Sullivan]
+
+****    Fix vrename missing first quote symbol msg1684. [Josef Wells]
 
 
 * Verilog::Language 3.414 2015-06-26
